--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,15 @@ h1, h2, h3{
     border-radius: 50%;
 }
 
+.footer-content > div:first-child div img{
+    height: 100%;
+    width: 100%;
+}
+
+.footer-content > p{
+    margin-top: 10px;
+}
+
 
 /* Media Queries */
 
