change <576 px header h1 to 3 rem

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ h1, h2, h3{
     padding-bottom: 4rem;
 }
 .header-content h1{
-    font-size: 4rem;
+    font-size: 4.5rem;
     margin-bottom: 0;
     text-transform: uppercase;
     color: var(--light-color);
@@ -511,6 +511,9 @@ h1, h2, h3{
 @media(max-width: 576px){
     .nav-content ul{
         display: none;
+    }
+    .header-content h1{
+        font-size: 3rem;
     }
 }
 @media(min-width: 576px){
