--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ h1, h2, h3{
     padding-bottom: 4rem;
 }
 .header-content h1{
-    font-size: 2rem;
+    font-size: 4.5rem;
     margin-bottom: 0;
     text-transform: uppercase;
     color: var(--light-color);
@@ -240,24 +240,19 @@ h1, h2, h3{
     background-color: rgba(255, 255, 255, 0.95);
     z-index: 9999;
     text-align: center;
-    overflow: hidden; /* Use overflow: hidden to prevent scrolling */
 }
 
 .lightbox-content {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: none; /* Allow the content to exceed viewport width */
-    max-height: none; /* Allow the content to exceed viewport height */
-    overflow: hidden; /* Use overflow: hidden to prevent scrolling */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    text-align: center;
+    overflow: auto;
+    max-width: 90vw; /* Limit maximum width to 90% of viewport width */
+    max-height: 90vh; /* Limit maximum height to 90% of viewport height */
 }
-
-
 
 .lightbox-img {
     max-width: 100%;
@@ -267,7 +262,6 @@ h1, h2, h3{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    cursor: pointer; /* Add this line */
 }
 
 .lightbox-buttons {
