--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ h1, h2, h3{
     transform: scale(0.9);
 }
 /* CSS for lightbox */
-.lightbox {
+/* .lightbox {
     display: none;
     position: fixed;
     top: 0;
@@ -241,6 +241,7 @@ h1, h2, h3{
     background-color: rgba(255, 255, 255, 0.95);
     z-index: 9999;
     text-align: center;
+    overflow: hidden; 
 }
 
 .lightbox-content {
@@ -251,8 +252,8 @@ h1, h2, h3{
     display: inline-block;
     text-align: center;
     overflow: auto;
-    max-width: 90vw; /* Limit maximum width to 90% of viewport width */
-    max-height: 90vh; /* Limit maximum height to 90% of viewport height */
+    max-width: 90vw; 
+    max-height: 90vh;
 }
 
 .lightbox-img {
@@ -263,6 +264,46 @@ h1, h2, h3{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+} */
+
+.lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.95);
+    z-index: 9999;
+    text-align: center;
+    overflow: hidden; /* Use overflow: hidden to prevent scrolling */
+}
+
+.lightbox-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: none; /* Allow the content to exceed viewport width */
+    max-height: none; /* Allow the content to exceed viewport height */
+    overflow: hidden; /* Use overflow: hidden to prevent scrolling */
+}
+
+.lightbox-img {
+    max-width: 80%;
+    max-height: 80vh;
+    width: auto;
+    height: auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform-origin: center center;
+    transform: translate(-50%, -50%);
+    cursor: pointer; /* Add this line */
 }
 
 .lightbox-buttons {
