--- a/css/style.css
+++ b/css/style.css
@@ -217,17 +217,17 @@ h1, h2, h3{
     margin: 5px; /* Add margin to create spacing between buttons */
     max-width: 100%; /* Allow buttons to occupy full width of grid cell */
 }
-
-
-.portfolio-nav button.active {
-    color: #333; /* Dark grey color for active text */
-    font-weight: 600;
+.portfolio-nav button :hover{
+    opacity: 0.7;
+    transition: var(--transition);
 }
-
+/* .portfolio-nav button.active {
+    color: #333;
+    font-weight: 600;
+} */
 .portfolio-grid > div{
     transition: var(--transition);
 }
-
 .portfolio-grid > div:hover{
     transform: scale(0.9);
     cursor: pointer;
@@ -273,6 +273,7 @@ h1, h2, h3{
     margin: auto;
     transform-origin: center center;
     cursor: pointer;
+    transition: transform 0.3s ease-in-out; /* Adjust the duration and timing function as needed */
 }
 
 /* Update the CSS for positioned buttons outside the lightbox content */
